sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:4: error: not found: value ecrat
  if(ecrat = ecart>1){
     ^